[gd_scene load_steps=5 format=3 uid="uid://gcy755tp74rl"]

[ext_resource type="Script" path="res://Scenes/Prefabs/BoosterPrefab.gd" id="1_6dvij"]
[ext_resource type="FontFile" uid="uid://ccgpsjqwwow8o" path="res://Fonts/Bubblegum.ttf" id="1_6oh8p"]
[ext_resource type="Texture2D" uid="uid://cvtswe6r2076h" path="res://Images/UI/Achievmentes/Lock.png" id="2_7mdov"]
[ext_resource type="Texture2D" uid="uid://bhcgfqs2j6bx4" path="res://Images/UI/Lives/Life.png" id="3_dsj7r"]

[node name="PlanPrefab" type="Node2D"]
scale = Vector2(1.6, 1.6)
script = ExtResource("1_6dvij")

[node name="PlanName" type="Label" parent="."]
offset_left = 1.0
offset_top = 4.0
offset_right = 170.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("1_6oh8p")
theme_override_font_sizes/font_size = 25
text = "BoosterName"

[node name="RequiredLevel" type="Node2D" parent="."]
visible = false
position = Vector2(0, 6)

[node name="ReqLevelLabel" type="Label" parent="RequiredLevel"]
offset_left = 227.0
offset_right = 318.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_6oh8p")
theme_override_font_sizes/font_size = 20
text = "Poziom X"

[node name="LockSprite" type="Sprite2D" parent="RequiredLevel"]
position = Vector2(329, 10)
scale = Vector2(0.14, 0.14)
texture = ExtResource("2_7mdov")

[node name="Price" type="Node2D" parent="."]
position = Vector2(-7, 3)
metadata/_edit_group_ = true

[node name="PriceLabel" type="Label" parent="Price"]
offset_left = 210.0
offset_right = 270.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("1_6oh8p")
theme_override_font_sizes/font_size = 20
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FishIcon" type="Sprite2D" parent="Price"]
position = Vector2(285, 12)
rotation = 4.71239
scale = Vector2(0.0302491, 0.0302491)
texture = ExtResource("3_dsj7r")

[node name="BuyButton" type="Button" parent="Price"]
offset_left = 301.0
offset_right = 341.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 12
text = "Kup"

[connection signal="pressed" from="Price/BuyButton" to="." method="_on_buy_button_pressed"]
